--- a/css/styles.css
+++ b/css/styles.css
@@ -603,6 +603,10 @@ h1 {
     counter-increment: counter-apartado;
     content: counter(counter-apartado)'. ';
 }
+.modal-header>h2::before{
+    counter-increment: counter-modal;
+    content: counter(counter-modal)'. ';
+}
 
 /*para ajustar el inio con el encabezado*/
 .apartados {
@@ -616,6 +620,7 @@ h1 {
 .apartado-individual {
     margin-top: -2rem;
     counter-reset: counter-apartado;/*importante, especifica el grupo de los numeros*/  
+    counter-reset: counter-modal;/*importante, especifica el grupo de los numeros*/  
    
     border: var(--border-px) solid purple;
 }
