--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ html {
     /*prueba-> hice esto hace que la pagina no vaile de izq a der*/
     background-color: hsl(0, 0%, 0%);
     --icon-color: hsl(0, 0%, 85%);/*solo iconos de los svg H1*/
+    --color-0:hsl(0, 0%, 0%);
     --color-1:hsl(0, 0%, 90%);
     --color-2:hsl(0, 0%, 15%);
     --color-3:hsl(0, 0%, 25%);
@@ -135,6 +136,9 @@ a {
 
 
 }
+.header-nav>img{
+    color: red;
+}
 
 .menu-logo,
 .menu-icon,
@@ -142,6 +146,7 @@ a {
 .encabezado-icon,
 .rrss {
     list-style-type: none;
+
 
 
 }
@@ -395,7 +400,7 @@ a.menu-icon-enlace:active {
 h4 {
 
     margin: 0;
-    color: #fff;
+    color: var(--color-1);
     background-color: var(--color-2);
     text-align: center;
 
@@ -791,7 +796,7 @@ footer>p {
 /* Modal Content */
 .modal-content {
     position: relative;
-    background-color: #fefefe;
+    background-color: var(--color-2);
     margin: auto;
     padding: 0;
     border: 0px solid hsl(0, 0%, 53%);
@@ -873,7 +878,7 @@ footer>p {
     font-weight: lighter;
 
 
-    background-color: hsl(0, 0%, 70%);
+    background-color: var(--color-3);
     padding: .75rem;
     border-radius: 5px;
 }
@@ -899,7 +904,7 @@ footer>p {
 .next:focus,
 .previous:hover,
 .previous:Focus {
-    color: #000;
+    color: var(--color-0);
     text-decoration: none;
     cursor: pointer;
 }
@@ -907,7 +912,7 @@ footer>p {
 
 .modal-header {
     padding: 2px 16px;
-    background-color: var(--icon-color);
+    background-color: var(--color-0);
     color: var(--color-1);
     border-radius: 5px 5px 0 0;
 }
@@ -921,7 +926,7 @@ footer>p {
 }
 .modal-footer {
     padding: 2px 16px;
-    background-color: var(--icon-color);
+    background-color: var(--color-0);
     color: var(--color-1);
     border-radius: 0 0 5px 5px;
 }
