--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ html {
     font-size: 115%;
     line-height: 1.5rem;
     box-sizing: borderbox;
-    font-family: futura, helvetica, arial, sans-serif;
+    font-family: 'Urbanist', futura, helvetica, arial, sans-serif;
     scroll-behavior: smooth;
     overscroll-behavior-x: none;
     /*prueba-> hice esto hace que la pagina no vaile de izq a der*/
@@ -120,7 +120,7 @@ a {
     margin-bottom: 0.5rem;
     /*margin-top:0rem;*/
     /*background-color:rgba(173, 216, 230, 85%);*/
-    background-image: linear-gradient( black, hsla(0, 0%, 0%, 0.70));
+    background-image: linear-gradient( black, hsla(0, 0%, 15%, 0.70));
     /*var(--color-2);*/
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
@@ -330,6 +330,7 @@ a {
     padding: .2rem;
     min-width: 8rem;
     text-align: left;
+    font-weight: 600;
 
     border: var(--border-px) solid white;
 }
@@ -485,6 +486,7 @@ h4 {
 }
 
 .encabezado-icon-enlace>span {
+    font-weight: 600;
 
     border: var(--border-px) solid black;
 }
@@ -579,6 +581,7 @@ h1 {
     color: var(--color-1);
     padding: 0rem;
     margin-right: 1rem;
+    font-weight:600;
     position: relative;
     scroll-snap-align: center;
     box-shadow: 0px 5px 15px -5px black;
@@ -824,20 +827,17 @@ footer>p {
 .first-element {
     animation: none;
     /*z-index: 1;*/
-
 }
 
 @keyframes animate-l2r {
     from {
         left: -500px;
         opacity: 0;
-
     }
 
     to {
         left: 0;
         opacity: 1;
-
     }
 }
 
@@ -883,6 +883,10 @@ footer>p {
     border-radius: 5px;
 }
 .close{
+    font-weight: 400;
+    font-size: 3rem;
+    padding-bottom: 1rem;
+    
     top: 1.5rem;
     right: 2vw;
 
