--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ body {
     margin:0 auto;
     min-height: 100vh;
     max-width: 1400px;
+    overscroll-behavior: none;
     
 }
 
@@ -692,8 +693,7 @@ footer {
         0 0 0;
     background-color: var(--color-2);
     height: auto;
-
-
+    
     border: var(--border-px) solid red;
 }
 
